welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: illegal start of simple expression
 	else if ( weekday == true && vacation == true ) { return true} else [ return false }
                                                                            ^sleepIn:10: error: Unmatched closing brace '}' ignored here
 }
 ^